--- a/style.css
+++ b/style.css
@@ -31,6 +31,7 @@
   nav,
   .nav-links {
     display: flex;
+    background-color: rgb(143, 180, 71);
   }
   
   nav {
@@ -46,16 +47,21 @@
   }
   
   a {
-    color: black;
+    color: #1f1d1d;
     text-decoration: none;
-    text-decoration-color: white;
+    text-decoration-color: rgb(16, 58, 17);
+
+    display: inline-block; /* Ensures it can scale */
+    transition: transform 0.3s ease-in-out, color 0.3s ease-in-out;
   }
   
   a:hover {
-    color: grey;
+    color: rgb(6, 51, 4);
     text-decoration: underline;
     text-underline-offset: 1rem;
-    text-decoration-color: rgb(181, 181, 181);
+    text-decoration-color: rgb(3, 41, 4);
+
+    transform: scale(1.1); 
   }
   
   .logo {
@@ -89,7 +95,7 @@
   .hamburger-icon span {
     width: 100%;
     height: 2px;
-    background-color: black;
+    background-color: rgb(0, 0, 0);
     transition: all 0.3 ease-in-out;
   }
   
@@ -97,7 +103,8 @@
     position: absolute;
     top: 100%;
     right: 0;
-    background-color: white;
+    
+    background-color: rgb(14, 84, 33);
     width: fit-content;
     max-height: 0;
     overflow: hidden;
@@ -109,7 +116,7 @@
     padding: 10px;
     text-align: center;
     font-size: 1.5rem;
-    color: black;
+    color: rgb(236, 228, 228);
     text-decoration: none;
     transition: all 0.3 ease-in-out;
   }
@@ -171,8 +178,8 @@
   
   .section__pic-container {
     display: flex;
-    height: 400px;
-    width: 400px;
+    height: 800px;
+    width: 800px;
     margin: auto 0;
   }
   
@@ -187,15 +194,16 @@
   
   .section__text__p1 {
     text-align: center;
+    font-size: 1.75rem;
   }
   
   .section__text__p2 {
-    font-size: 1.75rem;
+    font-size: 2rem;
     margin-bottom: 1rem;
   }
   
   .title {
-    font-size: 3rem;
+    font-size: 5rem;
     text-align: center;
   }
   
@@ -205,6 +213,19 @@
     margin-top: 1rem;
     gap: 1rem;
   }
+
+  #socials-container:hover {
+    cursor: pointer;
+  }
+  
+  #socials-container .icon {
+    transition: transform 0.3s ease-in-out;
+  }
+  
+  #socials-container .icon:hover {
+    transform: scale(1.2); /* Makes icons grow slightly */
+  }
+  
   
   /* ICONS */
   
@@ -246,7 +267,8 @@
   }
   
   .btn-color-1:hover {
-    background: rgb(0, 0, 0);
+    background: white;
+    color: rgb(3, 3, 3);
   }
   
   .btn-color-2 {
@@ -329,7 +351,13 @@
   display: flex;
   justify-content: center;
   flex-direction: column;
+  transition: transform 0.3s ease-in-out;
 }
+.experience-details-container .details-container:hover,
+  .about-details-container .details-container:hover {
+    transform: scale(1.05);
+    background-color: rgb(143, 180, 71); /* Makes only the experience and education boxes grow on hover */
+  }
 
 .article-container {
   display: flex;
